welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:15: error: ';' expected but ')' found.
      T12i-1) = T2(i-1)-1;
            ^